--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,14 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>Clases de Introducción a la Ingeniería en Software</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p>Estas son la clases de Introducción a la Ingeniería en Software vistas durante el primer Parcial del Semestre.</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+        </div>
+    </div>
+</header>
+a>
         </div>
     </div>
 </header>
