--- a/css/resume.css
+++ b/css/resume.css
@@ -84,8 +84,8 @@ p.lead {
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
-  font-weight: 400;
-  letter-spacing: 0.025rem;
+  font-weight: 800;
+  letter-spacing: 0.05rem;
   text-transform: uppercase;
 }
 
@@ -126,10 +126,10 @@ p.lead {
     width: 100%;
   }
   #sideNav .navbar-collapse .navbar-nav .nav-item {
-    display: none;
+    display: block;
   }
   #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
-    display: none;
+    display: block;
   }
 }
 
